[package]
name = "url-to-md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "url-to-md"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
select = "0.6"
html2md = "0.2"
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }